<resources>
    <string name="app_name">ForcaLunar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Telas -->
    <string name="titulo_app">FORCA LUNAR</string>
    <string name="titulo_jogo">Forca Lunar</string>
    <string name="jogador_label">Jogador:ㅤ</string>
    <string name="tempo_label">Tempo:ㅤ</string>
    <string name="palavra_oculta_placeholder">_____</string>

    <!-- Tela inicial -->
    <string name="hint_nick">Digite seu nick</string>
    <string name="botao_iniciar">Iniciar</string>
    <string name="tela_cadastrar">Cadastrar Palavras</string>


    <!-- Cadastro de palavras -->
    <string name="hint_palavra">Digite a palavra</string>
    <string name="hint_tema">Digite o tema / categoria</string>
    <string name="botao_salvar">Salvar</string>
    <string name="toast_cadastro_ok">Palavra cadastrada: </string>
    <string name="toast_preencha_campos">Preencha palavra e tema</string>

    <!-- Diálogos -->
    <string name="dialog_vitoria_titulo">Parabéns!</string>
    <string name="dialog_vitoria_mensagem">Você acertou a palavra: </string>
    <string name="dialog_derrota_titulo">Você perdeu!</string>
    <string name="dialog_derrota_mensagem">Você cometeu 6 erros.\nA palavra era: </string>
    <string name="dialog_tempo_titulo">Tempo esgotado!</string>
    <string name="dialog_tempo_mensagem">Você não conseguiu adivinhar a tempo.\nA palavra era: </string>
    <string name="botao_nova_partida">Nova partida</string>
    <string name="botao_nova_palavra">Nova palavra</string>
    <string name="botao_sair">Sair</string>

    <!-- Acessibilidade -->
    <string name="content_desc_forca">Imagem da forca mostrando %1$d erros</string>
    <string name="botao_voltar">Voltar</string>
    <string name="ic_cadastrar_palavra">📜</string>
    <string name="texto_decorativo">✧ QUE KHONSHU TE GUIE ✧</string>
    <string name="botao_altenar_teclado">Alternar teclado</string>
    <string name="avatar_do_jogador">Avatar do jogador</string>
    <string name="pontuacao">⭐ 0 pts</string>
    <string name="letras_tentadas">Letras tentadas:</string>
    <string name="div_letras_tentadas">-</string>
    <string name="hint_letra_forca">Digite uma letra...</string>
    <string name="ic_lua">🌙</string>
    <string name="desc_selecionar_avatar">Selecionar Avatar</string>
    <string name="ic_derrota">💀</string>
    <string name="ic_tempo_esgotado">⏰</string>
    <string name="ic_vitoria">🏆</string>
    <string name="escolher_avatar">Escolha seu Avatar</string>
    <string name="marc_spector">Marc Spector</string>
    <string name="steven_grant">Steven Grant</string>
    <string name="jake_lockley">Jake Lockley</string>
    <string name="konshu">Konshu</string>
</resources>